--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,29 +1,59 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: rayker77 # Your GitHub organization or username, where this repository lives
+repo: upptimee # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: GTD Mostazal
+    check: "tcp-ping"
+    url: 200.126.94.66
+    port: 80
+  - name: Movistar Mostazal
+    check: "tcp-ping"
+    url: 200.54.96.124
+    port: 53
+  - name:Entel Mostazal
+    check: "tcp-ping"
+    url: 164.77.172.234
+    port: 80
+  - name: GTD Malloa
+    check: "tcp-ping"
+    url: 200.126.94.50
+    port: 80
+  - name: CSTIC Malloa
+    check: "tcp-ping"
+    url: 45.165.168.4
+    port: 80
+  - name: Gtd Molina
+    check: "tcp-ping"
+    url: 200.126.94.34
+    port: 80
+  - name: Movistar Molina
+    check: "tcp-ping"
+    url: 200.68.57.58
+    port: 80
+  - name: Entel Molina
+    check: "tcp-ping"
+    url: 186.67.50.94
+    port: 80
+
+assignees:
+  - Rayker77
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  baseUrl: /upptimee
+  logoUrl: https://garcesfruit.com/favicon.ico
+  favicon: https://garcesfruit.com/favicon.ico
+  faviconSvg: https://garcesfruit.com/favicon.ico
+  # logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Upptime** Sitios corporativos"
+  introMessage:
   navbar:
-    - title: Status
-      href: /
+    - title: GarcesFruit
+      href: https://garcesfruit.com/
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
